--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,11 @@
-project:
-  title: "blue-sky-sailboat.github.io"
-
-
-
+website:
+  title: "Your Hub"
+  site-url: "https://blue-sky-sailboat.github.io"
+  navbar:
+    left:
+      - text: Tech
+        href: tech/index.qmd
+      - text: Projects
+        href: projects/index.qmd
+      - text: Life
+        href: life/index.qmd
