--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,11 +1,8 @@
+﻿project:
+  type: website
+  output-dir: _site
 website:
   title: "Your Hub"
-  site-url: "https://blue-sky-sailboat.github.io"
-  navbar:
-    left:
-      - text: Tech
-        href: tech/index.qmd
-      - text: Projects
-        href: projects/index.qmd
-      - text: Life
-        href: life/index.qmd
+format:
+  html:
+    toc: true
