--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,14 +5,7 @@
 website:
   title: "Your Hub"
   site-url: "https://blue-sky-sailboat.github.io"
-  navbar:
-    left:
-      - text: Tech
-        href: tech/index.qmd
-      - text: Projects
-        href: projects/index.qmd
-      - text: Life
-        href: life/index.qmd
+      right:\n      - icon: github\n        href: https://github.com/blue-sky-sailboat\n      - icon: linkedin\n        href: https://www.linkedin.com/in/여기에-아이디\n        href: life/index.qmd
 
 format:
   html:
@@ -26,3 +19,10 @@ execute:
   cache: true
 
 lang: ko
+
+search:
+  location: navbar
+  type: overlay
+
+page-navigation: true
+
