--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,17 @@ website:
   search:
     location: navbar
     type: overlay
+  navbar:
+    left:
+      - text: Tech
+        href: tech/index.qmd
+      - text: Projects
+        href: projects/index.qmd
+      - text: Life
+        href: life/index.qmd
+    right:
+      - icon: github
+        href: https://github.com/blue-sky-sailboat
 
 format:
   html:
