fix(theme): remove BOM and compile SCSS properly

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,7 +24,7 @@ website:
 
 format:
   html:
-    theme: [cosmo, assets/theme.scss]
+    theme: [cosmo, assets/site-theme.scss]
     toc: true
     page-navigation: true
     include-in-header:
