--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,9 @@ jobs:
         uses: actions/upload-pages-artifact@v4
         with:
           path: _site
+            - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
   deploy:
     environment:
